# rawmem

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  LEDGER_PROTOCOL.md  RELEASE_CHECKLIST.md  SETUP.md
docs/benchmarks/: ledger-0.6.1-1m.json
docs/releases/: 0.5.0.md  0.6.0.md  0.6.1.md  0.6.2.md
examples/: codex-task.json
extension/: background.js  manifest.json  options.html  options.js
scripts/: benchmark_ledger.py  open_source_audit.py  smoke_daemon.py
src/rawmem/: __init__.py  archive.py  archive_format.py  cli.py  clipboard.py  config.py  daemon.py  diagnostics.py  ledger.py  locking.py  privacy.py  projection.py  setup_tools.py  tailers.py  verification.py  watcher.py  web_capture.py
tests/: test_archive.py  test_benchmark.py  test_cli.py  test_daemon.py  test_diagnostics.py  test_ledger.py  test_privacy.py  test_setup_tools.py  test_tailers.py  test_web_capture.py
tests/fixtures/: archive_contract_v1.json
tests/fixtures/tailers/: claude-code.jsonl  codex.jsonl  cursor.jsonl
